# just_fmt

./: Cargo.toml  README.md
src/: fmt_case_style.rs  fmt_path.rs  lib.rs
