[package]
name = "just_fmt"
authors = ["Weicao-CatilGrass"]
description = "Just a crate for formatting some things"

readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/catilgrass/just_fmt"

version = "0.1.1"
edition = "2024"

[dependencies.strip-ansi-escapes]
version = "0.2.1"
optional = true

[features]
default = []
all = [ "strip-ansi" ]
strip-ansi = ["dep:strip-ansi-escapes"]
